--- a/example/PushTest/app/build.gradle
+++ b/example/PushTest/app/build.gradle
@@ -23,6 +23,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
-    compile "com.google.android.gms:play-services:7.5.+"
+    compile 'com.google.android.gms:play-services:8.1.0'
     compile project(':ncmb-core')
 }
