--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: android
 jdk:
   - oraclejdk8
+env:
+  matrix:
+    - ANDROID_SDKS=android-14,sysimg-14  ANDROID_TARGET=android-14  ANDROID_ABI=armeabi-v7a
+    - ANDROID_SDKS=android-23,sysimg-23  ANDROID_TARGET=android-23  ANDROID_ABI=armeabi-v7a
 android:
   components:
     - build-tools-23.0.0
-    - android-23
     - extra-android-support
     - extra-android-m2repository
     - extra-google-m2repository
