--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
 android:
   components:
     - build-tools-23.0.0
+    - android-14
+    - android-23
     - extra-android-support
     - extra-android-m2repository
     - extra-google-m2repository
