--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -390,6 +390,21 @@
     method: POST
     body:
       authData:
+        facebook:
+          id: invalidFacebookDummyId
+          access_token: invalidFacebookDummyAccessToken
+          expiration_date:
+            __type: Date
+            iso: "2016-06-07T01:02:03.004Z"
+  response:
+    status: 401
+    file: authentication_error_facebook.json
+---
+  request:
+    url: /2013-09-01/users
+    method: POST
+    body:
+      authData:
         twitter:
           id: twitterDummyId
           screen_name: twitterDummyScreenName
