--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -36,6 +36,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services:8.1.0'
+    testCompile "org.robolectric:shadows-play-services:3.0"
+    testCompile "org.robolectric:shadows-support-v4:3.0"
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:appcompat-v7:23.0.0'
     testCompile 'junit:junit:4.12'
