--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -401,6 +401,21 @@
     file: authentication_error_facebook.json
 ---
   request:
+    url: /2013-09-01/users/dummyUserId
+    method: PUT
+    body:
+      authData:
+        facebook:
+          id: facebookDummyId
+          access_token: facebookDummyAccessToken
+          expiration_date:
+            __type: Date
+            iso: "2016-06-07T01:02:03.004Z"
+  response:
+    status: 200
+    file: valid_put_response.json
+---
+  request:
     url: /2013-09-01/users
     method: POST
     body:
