--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -543,6 +543,16 @@
     file: authentication_error_google.json
 ---
   request:
+    url: /2013-09-01/users/dummyObjectId
+    method: PUT
+    body:
+      authData:
+        google: null
+  response:
+    status: 200
+    file: valid_put_response.json
+---
+  request:
     url: /2013-09-01/users
     method: POST
     body:
