--- a/example/SNSTest/settings.gradle
+++ b/example/SNSTest/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':facebooksample'
+include ':app', ':facebooksample', ':twittersample'
 include ':ncmb-core'
 project(':ncmb-core').projectDir = new File(settingsDir, '../../ncmb-core')
