add test code of the script fix assert of the test code

--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -881,3 +881,26 @@
   response:
     status: 200
     file: valid_search_file_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript.js
+    method: GET
+  response:
+    status: 200
+    file: valid_get_script_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript.js
+    method: GET
+    query:
+      {"name":"tarou"}
+  response:
+    status: 200
+    file: valid_get_script_query_response.json
+---
+  request:
+    url: /2015-09-01/script/errorTestScript.js
+    method: GET
+  response:
+    status: 404
+    file: valid_error_script_notFound_response.json
