add NCMBScriptServiceTest case add test case for each method fix assert of the test code fix SERVICE_PATH value

--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -885,6 +885,24 @@
   request:
     url: /2015-09-01/script/testScript.js
     method: GET
+    header:
+      {"key":"value"}
+  response:
+    status: 200
+    file: valid_get_script_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript.js
+    method: POST
+    body:
+      {"name":"tarou"}
+  response:
+    status: 200
+    file: valid_get_script_query_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript.js
+    method: GET
   response:
     status: 200
     file: valid_get_script_response.json
@@ -904,3 +922,37 @@
   response:
     status: 404
     file: valid_error_script_notFound_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript_POST.js
+    method: POST
+    body:
+      {"message":"hello,tarou"}
+  response:
+    status: 200
+    file: valid_get_script_query_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript_PUT.js
+    method: PUT
+    body:
+      {"message":"hello,tarou"}
+  response:
+    status: 200
+    file: valid_get_script_query_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript_GET.js
+    method: GET
+    query:
+      {"name":"tarou"}
+  response:
+    status: 200
+    file: valid_get_script_query_response.json
+---
+  request:
+    url: /2015-09-01/script/testScript_DELETE.js
+    method: DELETE
+  response:
+    status: 200
+    file: valid_get_script_response.json
