--- a/example/PushTest/app/src/main/AndroidManifest.xml
+++ b/example/PushTest/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="com.nifty.cloud.mb.pushtest.permission.C2D_MESSAGE" />
 
     <application
+        android:name="com.nifty.cloud.mb.core.NCMBApplicationController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
