--- a/example/SNSTest/googlesample/src/main/AndroidManifest.xml
+++ b/example/SNSTest/googlesample/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
+        android:name="com.nifty.cloud.mb.core.NCMBApplicationController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
