--- a/example/SNSTest/twittersample/src/main/AndroidManifest.xml
+++ b/example/SNSTest/twittersample/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.nifty.cloud.mb.twittersample" >
 
     <application
+        android:name="com.nifty.cloud.mb.core.NCMBApplicationController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
