--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -3,9 +3,13 @@ apply plugin: 'com.android.library'
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
@@ -17,7 +21,7 @@ allprojects {
 }
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 14
@@ -36,6 +40,10 @@ repositories {
     maven {
         url 'https://maven.google.com'
         // Alternative URL is 'https://dl.google.com/dl/android/maven2/'
+    }
+    maven {
+        url 'https://maven.google.com/'
+        name 'Google'
     }
 }
 
