--- a/ncmb-core/gradle/wrapper/gradle-wrapper.properties
+++ b/ncmb-core/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jan 26 13:38:37 JST 2018
+#Sat Sep 19 17:12:52 JST 2015
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.4-bin.zip
