--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -3,9 +3,10 @@ apply plugin: 'com.android.library'
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
@@ -17,7 +18,7 @@ allprojects {
 }
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 14
