fix dependencie play-services-gcm only

--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -41,7 +41,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:11.0.0'
+    compile 'com.google.android.gms:play-services-gcm:11.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:appcompat-v7:26.0.2'
     testCompile 'junit:junit:4.12'
