--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -1115,4 +1115,13 @@
   response:
     status: 201
     file: valid_post_registerUser_response.json
-
+---
+  request:
+    url: /2013-09-01/files
+    method: GET
+    query:
+      count: 1
+      limit: 1
+  response:
+    status: 200
+    file: valid_count_file_response.json
