--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
     }
 }
 
@@ -18,12 +18,12 @@ allprojects {
     }
 }
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -48,8 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:15.0.0'
     implementation 'com.google.android.gms:play-services-base:15.0.0'
     implementation 'com.google.code.gson:gson:2.3.1'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:27.0.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:3.0"
