--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -4,7 +4,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -35,6 +34,7 @@ android {
     }
 
     lintOptions {
+        disable 'GradleCompatible'
         lintConfig file("lint.xml")
     }
 }
