issue: #197: ログイン中状態で新規ユーザを登録する場合、currentUserが変更されます

--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -1137,3 +1137,13 @@
   response:
     status: 200
     file: valid_count_file_response.json
+---
+request:
+  url: /2013-09-01/users
+  method: POST
+  body:
+    userName: "signUpAfterLogin"
+    password: "signUpAfterLogin"
+response:
+  status: 201
+  file: valid_post_registerUser_afterlogin_response.json
