--- a/ncmb-core/src/test/assets/yaml/mbaas.yml
+++ b/ncmb-core/src/test/assets/yaml/mbaas.yml
@@ -1137,3 +1137,13 @@
   response:
     status: 200
     file: valid_count_file_response.json
+---
+  request:
+    url: /2013-09-01/login
+    query:
+      userName: "saveAfterLogin"
+      password: saveAfterLogin
+    method: GET
+  response:
+    status: 200
+    file: valid_get_login_to_save_user_response.json
