--- a/ncmb-core/build.gradle
+++ b/ncmb-core/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:17.6.0'
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.annotation:annotation:1.0.0"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:3.0"
@@ -71,6 +72,7 @@ dependencies {
     testImplementation 'org.skyscreamer:jsonassert:1.2.3'
     testImplementation "org.robolectric:shadows-play-services:3.0"
     testImplementation "org.robolectric:shadows-support-v4:3.0"
+
 }
 
 task clearJar(type: Delete) {
