--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,7 @@ uploadArchives{
                 packaging 'jar'
                 // optionally artifactId can be defined here
                 description 'NIFCLOUD mobile backend Android SDK'
-                url 'https://mbaas.nifcloud.com/doc/current/index.html#/Android'
+                url 'https://github.com/NIFCLOUD-mbaas/ncmb_android#readme'
 
                 scm {
                     connection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
@@ -149,7 +149,7 @@ uploadArchives{
                 licenses {
                     license {
                         name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        url 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
                     }
                 }
 
