--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
+// apply plugin: 'com.android.library'
+// apply plugin: 'maven-publish'
+// apply plugin: 'signing'
+
+
 
 buildscript {
     repositories {
@@ -12,15 +14,22 @@ buildscript {
     }
 }
 
+plugins{
+    id 'com.android.library'
+    id 'maven-publish'
+    id 'signing'
+}
+
 version = 'x.x.x'
 group = 'com.nifcloud.mbaas'
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+// allprojects {
+//     repositories {
+//         google()
+//         mavenCentral()
+//     }
+// }
+
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
@@ -37,11 +46,21 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     lintOptions {
+        checkDependencies true
         disable 'GradleDependency'
         lintConfig file("lint.xml")
     }
 }
+androidExtensions{
+    experimental = true
+}
+
 repositories {
     google()
     mavenCentral()
@@ -116,8 +135,15 @@ artifacts {
 
 
 publishing{
+    publications{
+        library(MavenPublication) {
+            from components.java
+        }
+    }
     repositories {
         maven {
+
+            
             // beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
             // name = "OSSRH"
             // def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
