--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
-// apply plugin: 'com.android.library'
-// apply plugin: 'maven-publish'
-// apply plugin: 'signing'
+ apply plugin: 'android-library'
+ apply plugin: 'maven-publish'
+ apply plugin: 'signing'
 
 
 
-buildscript {
+buildscript{
     repositories {
         google()
         mavenCentral()
@@ -14,21 +14,14 @@ buildscript {
     }
 }
 
-plugins{
-    id 'com.android.library'
-    id 'maven-publish'
-    id 'signing'
-}
 
-version = 'x.x.x'
-group = 'com.nifcloud.mbaas'
 
-// allprojects {
-//     repositories {
-//         google()
-//         mavenCentral()
-//     }
-// }
+
+ allprojects {
+     repositories {
+         mavenCentral()
+     }
+ }
 
 android {
     compileSdkVersion 29
@@ -57,12 +50,11 @@ android {
         lintConfig file("lint.xml")
     }
 }
-androidExtensions{
-    experimental = true
-}
+//androidExtensions{
+//    experimental = true
+//}
 
 repositories {
-    google()
     mavenCentral()
     gradlePluginPortal()
 }
@@ -126,7 +118,7 @@ task javadoc(type: Javadoc) {
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
-    from javadoc.destinationDir
+    from javadoc
 }
 
 artifacts {
@@ -134,61 +126,61 @@ artifacts {
 }
 
 
+
 publishing{
-    publications{
-        library(MavenPublication) {
-            from components.java
-        }
-    }
     repositories {
         maven {
-
-            
             // beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
             // name = "OSSRH"
             // def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
             // def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
             // url = project.hasProperty('release') ? releasesRepoUrl : snapshotsRepoUrl
             url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
-
-            credentials{
+            credentials {
                 username = System.getenv("MAVEN_USERNAME")
-                password = System.getenv("MAVEN_PASSWORD") 
+                password = System.getenv("MAVEN_PASSWORD")
+            }
+        }
+    }
+    publications{
+        version = 'x.x.x'
+        group = 'com.nifcloud.mbaas'
+        maven(MavenPublication){
+
+            signing {
+                useGpgCmd()
+                //required { gradle.taskGraph.hasTask("publishing") }
+                sign publishing.publications
             }
 
             pom{
-                name 'ncmb_android'
-                packaging 'jar'
+                name = 'ncmb_android'
+                packaging = 'jar'
                 // optionally artifactId can be defined here
-                description 'NIFCLOUD mobile backend Android SDK'
-                url 'https://mbaas.nifcloud.com/en/'
+                description = 'NIFCLOUD mobile backend Android SDK'
+                url = 'https://mbaas.nifcloud.com/en/'
 
                 scm {
-                    connection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                    developerConnection 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
-                    url 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
+                    connection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+                    developerConnection = 'scm:git:https://github.com/NIFCLOUD-mbaas/ncmb_android.git'
+                    url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android'
                 }
 
                 licenses {
                     license {
-                        name 'The Apache License, Version 2.0'
-                        url 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
+                        name = 'The Apache License, Version 2.0'
+                        url = 'https://github.com/NIFCLOUD-mbaas/ncmb_android/blob/master/LICENCE'
                     }
                 }
 
                 developers {
                     developer {
-                        id 'ncmbsdk'
-                        name 'NCMB SDK Team'
+                        id = 'ncmbsdk'
+                        name = 'NCMB SDK Team'
                     }
                 }
             }
-
         }
     }
 }
-signing {
-    useGpgCmd()
-    required { gradle.taskGraph.hasTask("publishing") }
-    sign publishing.repositories
-}
+
